menu-style.css
/* ... */
@media screen and (max-width:320px){
    .header{
    display: flex;
    flex-direction: column;
    align-items: center;
    }
    .header .head{
    font-size: 45px;
    margin-right: 4px;
    margin-left: 12px;
    margin-bottom: 20px;
    margin-top: 15px;
    font-weight: 800;
    }
    
     .header .nav nav a{
    margin-right: 4px;
    padding-right: 8px;
    font-size: 22px;
     }

     .header .nav nav a:hover{
    font-size:23px;
    text-decoration: underline;
    text-underline-offset: 2px;

}

.header .logo img{
  display: none;
}

 .menu{
    display: grid;
    grid-template-columns: 1fr;
        grid-template-areas: 
    "title"
    "image"
    "image"
    "image"
    "item1"
    "item1"
    "item1"
    "image2"
    "image2"
    "image2"
    "item2"
    "item2"
    "item2"
    "image3"
    "image3"
    "image3"
    "item3"
    "item3"
    "item3"
    "button"
    "footer"
    ;
    gap:3px;
 }

 .menu .title{
    font-size: 32px;
    text-align: center;
    grid-area: title;
margin-right: 30%;
}

.menu .image{
    grid-area: image;
    margin-left: 10%;
    margin-top: 25px;
    padding-right: 20%;
}

.menu .image  img{
    height: 250px;
    width: 250px;
}

div.item1{
    grid-area: item1;
    font-size: 23px;
    text-align: center;
    margin-left: 25px;
}

div.item1 .title-1{
    font-size: 35px;
    margin-bottom: 15px;
    margin-top: -65px;
    text-align: left;

}

div.item1 .item-1 li{
    font-weight: 700;
    margin-bottom: 35px;
    text-align: left;
    margin-left: 20px;
}

div.item2 {
    grid-area: item2;
    font-size: 23px;
    text-align: center;
    margin-left: 10px;
    margin-top: 15px;
}

div.item2 .item-2{
    text-align: left;
    margin-left: 10px;
    font-weight: 700;
    padding-left: 10px;
}

div.item2 .title-1{
    font-size: 38px;
    margin-bottom: 18px;
    margin-left: 10px;
    text-align: left;
}

div.item2 .item-2 li{
    margin-bottom: 15px;
    color: rgb(0, 0, 0);
    font-size: 20px;
    text-align: left;
    margin-left: 15px;
}

.menu div.image2{
    grid-area: image2;
    margin-left: 5%;
    margin-bottom: 25px;
}
.menu .image2 img{
    height: 275px;
    width: 275px;
}

.menu div.image3{
    grid-area: image3;
    margin-left :5%;
}

.menu .image3 img{
    height: 275px;
    width: 275px;
}

div.item3{
    grid-area: item3;
    font-size: 25px;
    text-align: left;
    margin-left: 25px;
    margin-top: 25%;

}
 div.item3 .title-1{
    font-size: 38px;
    margin-bottom: 15px;
    margin-left:15px;
    text-align: left;
}

 .item3 div.item-3{
    margin-left: 15px;
    font-weight: 700;
    margin-bottom: 15px;
    font-size: 22px;
    text-align: left;
}

 div.item3 .item-3 li{
    font-size: 22px;
    margin-bottom: 15px;
    font-weight: 700;
    text-align: left;
    margin-bottom: 15px;
    color: rgb(0, 0, 0);
}

.button button {
    font-size: 25px;
    padding: 8px 40px;
    margin-right: 25%;
  
}

.button button:hover{
font-size: 27px;
}

.footer footer p {
    font-size: small;
      margin-right: 25%;
    padding: 15px;
    text-align: left;
}
}

